--- a/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
+++ b/module-2/lab-two-sample-hypothesis-tests/your-code/main.ipynb
@@ -17,7 +17,8 @@
    "outputs": [],
    "source": [
     "# import numpy and pandas\n",
-    "\n"
+    "import numpy as np\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +52,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "pokemon.head()"
    ]
   },
   {
@@ -68,11 +212,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Legendary\n",
+       "False    735\n",
+       "True      65\n",
+       "Name: #, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
+    "pokemon.groupby(\"Legendary\")[\"#\"].count()\n",
     "\n"
    ]
   },
@@ -85,12 +244,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MEAN'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Legendary\n",
+       "False    417.213605\n",
+       "True     637.384615\n",
+       "Name: Total, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'STANDARD DEVIATION'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Legendary\n",
+       "False    106.760417\n",
+       "True      60.937389\n",
+       "Name: Total, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "display(\"MEAN\",pokemon.groupby(\"Legendary\")[\"Total\"].mean())\n",
+    "display(\"STANDARD DEVIATION\",pokemon.groupby(\"Legendary\")[\"Total\"].std())"
    ]
   },
   {
@@ -104,13 +308,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=25.8335743895517, pvalue=9.357954335957446e-47)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "from scipy.stats import ttest_ind\n",
+    "pok=pokemon.groupby(\"Legendary\")[\"Total\"].apply(pd.DataFrame)\n",
+    "no_leg_punt=np.array(pok[list(pok.columns)[0]].dropna())\n",
+    "leg_punt=np.array(pok[list(pok.columns)[1]].dropna())\n",
+    "ttest_ind(leg_punt,no_leg_punt,equal_var=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -126,7 +352,8 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "#Rechazo Ho, no son iguales"
    ]
   },
   {
@@ -138,12 +365,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Type 1\n",
+       "Bug          69\n",
+       "Dark         31\n",
+       "Dragon       32\n",
+       "Electric     44\n",
+       "Fairy        17\n",
+       "Fighting     27\n",
+       "Fire         52\n",
+       "Flying        4\n",
+       "Ghost        32\n",
+       "Grass        70\n",
+       "Ground       32\n",
+       "Ice          24\n",
+       "Normal       98\n",
+       "Poison       28\n",
+       "Psychic      57\n",
+       "Rock         44\n",
+       "Steel        27\n",
+       "Water       112\n",
+       "Name: #, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pokemon.groupby(\"Type 1\")[\"#\"].count()\n"
    ]
   },
   {
@@ -155,12 +412,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MEAN'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Type 1-W/O\n",
+       "Other    435.859012\n",
+       "Water    430.455357\n",
+       "Name: Total, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'STANDARD DEVIATION'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Type 1-W/O\n",
+       "Other    121.091682\n",
+       "Water    113.188266\n",
+       "Name: Total, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pokemon2=pokemon.copy()\n",
+    "def waterOrOther(x):\n",
+    "    if \"Water\" in str(x): return str(x)\n",
+    "    else: return \"Other\"\n",
+    "pokemon2[\"Type 1-W/O\"]= pokemon2[\"Type 1\"].apply(waterOrOther)\n",
+    "\n",
+    "display(\"MEAN\",pokemon2.groupby(\"Type 1-W/O\")[\"Total\"].mean())\n",
+    "display(\"STANDARD DEVIATION\",pokemon2.groupby(\"Type 1-W/O\")[\"Total\"].std())"
    ]
   },
   {
@@ -172,12 +479,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=0.4418547448849676, pvalue=0.6587140317488793)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pok=pokemon2.groupby(\"Type 1-W/O\")[\"Total\"].apply(pd.DataFrame)\n",
+    "pok_type_other=np.array(pok[\"Other\"].dropna())\n",
+    "pok_type_water=np.array(pok[\"Water\"].dropna())\n",
+    "ttest_ind(pok_type_other,pok_type_water)"
    ]
   },
   {
@@ -194,7 +515,9 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "# P_valor>0.05 con un 95% de confianza no podemos rechazar Ho\n",
+    "# No podemos decir que las medias de cada uno sean diferentes\n"
    ]
   },
   {
@@ -208,12 +531,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=4.325566393330478, pvalue=1.7140303479358558e-05)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "from scipy.stats import ttest_rel\n",
+    "ttest_rel(np.array(pokemon[\"Attack\"]),np.array(pokemon[\"Defense\"]))\n"
    ]
   },
   {
@@ -230,7 +565,9 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "# Al ser el p-valor muy alto no podemos rechazar la hipotesis nula\n",
+    "# no podemos afirmar que haya una diferencia significante entre ellas\n"
    ]
   },
   {
@@ -242,12 +579,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=0.853986188453353, pvalue=0.3933685997548122)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "ttest_rel(np.array(pokemon[\"Sp. Atk\"]),np.array(pokemon[\"Sp. Def\"]))\n"
    ]
   },
   {
@@ -264,7 +612,10 @@
    "outputs": [],
    "source": [
     "# Your conclusions here:\n",
-    "\n"
+    "\n",
+    "# Al ser el p-valor muy alto no podemos rechazar la hipotesis nula\n",
+    "# no podemos afirmar que haya una diferencia significante entre ellas\n",
+    "# con un intervalo de confianza del 95%"
    ]
   },
   {
@@ -278,12 +629,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=4.325566393330478, pvalue=1.7140303479358558e-05)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "    \n",
+    "from scipy.stats import ttest_1samp\n",
+    "\n",
+    "ttest_1samp( np.array(pokemon[\"Attack\"])-np.array(pokemon[\"Defense\"]),0)\n",
+    "#Como el p_valor es muy grande no podemos rechazar que la diferencia entre\n",
+    "# las medias sean igual a 0, es decir, que sean iguales \n",
     "    "
    ]
   },
@@ -300,12 +666,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Type 1-W/O</th>\n",
+       "      <th>Other</th>\n",
+       "      <th>Water</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Legendary</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>False</th>\n",
+       "      <td>627</td>\n",
+       "      <td>108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>True</th>\n",
+       "      <td>61</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Type 1-W/O  Other  Water\n",
+       "Legendary               \n",
+       "False         627    108\n",
+       "True           61      4"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "leg_wat_other=pd.crosstab(pokemon2[\"Legendary\"],pokemon2[\"Type 1-W/O\"])\n",
+    "leg_wat_other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "from scipy.stats import chi2_contingency\n"
    ]
   },
   {
@@ -317,12 +749,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.617455159932616, 0.0571762700873503, 1, array([[632.1, 102.9],\n",
+       "        [ 55.9,   9.1]]))"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "chi2_contingency(leg_wat_other,correction=False)"
    ]
   },
   {
@@ -339,7 +784,9 @@
    "outputs": [],
    "source": [
     "# Your answer here:\n",
-    "\n"
+    "\n",
+    "#P_valor> 0.05 con un 95% de confianza no podemos rechazar la hipotesis\n",
+    "# sin embargo a partir del 94% de confianza ya podriamos rechazarla"
    ]
   },
   {
@@ -366,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
